vite com bootstrap

--- a/classnotes/script/web/event-handling/list-items/index.html
+++ b/classnotes/script/web/event-handling/list-items/index.html
@@ -28,6 +28,7 @@
         ulTag.innerHTML = items;
 
         lengthInput.value = '';
+        // document.querySelector('form').reset();
       }
 
       function list(length) {
