--- a/exercises/web-script-iptable/host-app/index.html
+++ b/exercises/web-script-iptable/host-app/index.html
@@ -6,8 +6,18 @@
     <title>Host App</title>
   </head>
   <body>
-    <div id="app">
-      <h1 class="text-center">IP Table</h1>
+    <div id="app" class="container">
+      <h1 class="text-center py-5">IP Table</h1>
+      <table class="table">
+        <thead class="table-light">
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Endereço</th>
+            <th scope="col">Versão</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
     <script type="module" src="/js/main.js"></script>
   </body>
