--- a/exercises/web-script-iptable/host-app/index.html
+++ b/exercises/web-script-iptable/host-app/index.html
@@ -25,6 +25,7 @@
             <th scope="col">Nome</th>
             <th scope="col">Endereço</th>
             <th scope="col">Versão</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody></tbody>
