--- a/projects/monitor-app/frontend/index.html
+++ b/projects/monitor-app/frontend/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sair</a>
+              <a class="nav-link" href="#" onclick="signout()">Sair</a>
             </li>
           </ul>
         </div>
@@ -56,32 +56,7 @@
                     <th></th>
                   </tr>
                 </thead>
-                <tbody>
-                  <!-- <tr>
-                    <td>Google DNS</td>
-                    <td>8.8.8.8</td>
-                    <td class="host-events">
-                      <iconify-icon icon="bx:stopwatch"></iconify-icon>
-                      <iconify-icon class="ms-4" icon="bx:trash"></iconify-icon>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Cloudflare DNS</td>
-                    <td>1.1.1.1</td>
-                    <td class="host-events">
-                      <iconify-icon icon="bx:stopwatch"></iconify-icon>
-                      <iconify-icon class="ms-4" icon="bx:trash"></iconify-icon>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Google Search</td>
-                    <td>www.google.com</td>
-                    <td class="host-events">
-                      <iconify-icon icon="bx:stopwatch"></iconify-icon>
-                      <iconify-icon class="ms-4" icon="bx:trash"></iconify-icon>
-                    </td>
-                  </tr> -->
-                </tbody>
+                <tbody></tbody>
               </table>
             </div>
           </div>
@@ -102,6 +77,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/index.js"></script>
   </body>
 </html>
