--- a/projects/monitor-app/frontend/index.html
+++ b/projects/monitor-app/frontend/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monitor Host</title>
+    <style>
+      iconify-icon:hover {
+        cursor: pointer;
+      }
+
+      .hidden {
+        visibility: hidden;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -72,11 +81,7 @@
               <h5 class="text-center">Times</h5>
             </div>
             <div class="card-body">
-              <img
-                src="imgs/latency-chart.png"
-                alt="Gráfico de Latência"
-                width="100%"
-              />
+              <canvas id="chart-line"></canvas>
             </div>
           </div>
         </div>
